  Croatian, Czech, Dutch, French, Galician, German, Greek, Hebrew, Hungarian, Italian, Japanese, Korean, Malay,
  Polish, Portuguese (Brazil), Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tatar, Turkish, Ukrainian
  and Vietnamese translations
! Work-around corrupted display with NVIDIA drivers v344.11 when using EVR, EVR-CP or Sync renderers 
! "Load subtitle" dialog: Fix the file filters on Windows Vista+
! "Resources" tab: The resource saved wasn't always matching the selection
! Ticket #3930, Fix a possible crash with embedded subtitles when the subtitle queue is disabled
! Ticket #4505, Embedded text subtitles: Fix a possible crash related to the Subresync bar
! Ticket #4504, ASS/SSA subtitles: Support floating point values in drawing commands
! Ticket #4536, ASS/SSA subtitles: Fix the parsing of \fs tags when the value was negative
! Ticket #4665, Ensure that the icon shown in the status bar and the property dialog
  matches the icon currently associated to the format
! Ticket #4678/#4856, Use internal filters for GIF format
! Ticket #4684, Clicking on the some parts of the volume slider had no effect
! Ticket #4707, EVR-CP: Screenshots were corrupted when "Force 10-bit input" was used
* Ticket #4730, MediaInfo: Ensure the MediaInfo tab gives the same information as the official GUI
! Ticket #4744, Some subtitles could cause a crash or produce artifacts
! Ticket #4752, Monitors connected to secondary graphic card were not detected
! Ticket #4758, Adjust width of the groupbox headers to avoid empty space
! Ticket #4778, Fix optical drive detection when its letter is A or B.
! Ticket #4782, Backward framestep led to jumping to the wrong position in certain situations
! Ticket #4825, Tracks matching a preferred language weren't always selected correctly
! Ticket #4857, The timings of some subtitles could be wrong when using Sync Renderer
! Ticket #4863, MPC-HC could crash when opening a file through the QuickTime engine